Checked and updated odom_node

--- a/dabom_ws/src/odom/package.xml
+++ b/dabom_ws/src/odom/package.xml
@@ -1,31 +1,25 @@
 <?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <!-- Package Name -->
   <name>odom</name>
-  
-  <!-- Version of the package -->
   <version>0.0.1</version>
-  
-  <!-- Brief description of the package -->
-  <description>Inverse kinematics for the dabom holonomic robot project.</description>
-  
-  <!-- Your contact information -->
+  <description>Odometry node for a Mecanum-wheeled robot.</description>
   <maintainer email="christopher@karg.ca">Christopher Karg</maintainer>
-  
-  <!-- License for the package -->
-  <license>Apache-2.0</license>
+  <license>MIT</license>  <!-- Update to the license you're using -->
 
-  <!-- Build tool dependencies -->
+  <!-- Buildtool dependencies -->
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <!-- Runtime dependencies -->
-  <depend>rclcpp</depend> <!-- ROS2 C++ Client Library -->
+  <depend>rclpy</depend>
+  <depend>nav_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>tf2_ros</depend>
 
-  <!-- Optional dependencies (for testing and development tools) -->
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <!-- Execution dependencies -->
+  <exec_depend>python3</exec_depend>
 
-  <!-- Export the build type for ROS2 packages -->
   <export>
     <build_type>ament_cmake</build_type>
   </export>
