--- a/dabom_ws/src/xbox_controller/package.xml
+++ b/dabom_ws/src/xbox_controller/package.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>xbox_controller</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="c@todo.todo">c</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.0.1</version>
+  <description>ROS2 package for Xbox controller node that publishes cmd_vel messages.</description>
+  <maintainer email="christopher@karg.ca">Christopher Karg</maintainer>
+  <license>Apache-2.0</license>
 
-  <!-- Build dependencies -->
-  <buildtool_depend>ament_python</buildtool_depend>
+  <!-- Build tool dependencies -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <!-- Runtime dependencies -->
-  <exec_depend>rclpy</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>pygame</exec_depend>
-  <exec_depend>inputs</exec_depend>
+  <depend>rclpy</depend>
+  <depend>geometry_msgs</depend>
 
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
