--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -1,8 +1,9 @@
 # dabom_bringup/config/launch_config.yaml
 
-launch_inverse_kinematics: true
-launch_odom: true
-launch_serial_comm: true
-launch_sllidar: true
-launch_joint_state_publisher: true
+inverse_kinematics: true
+odom: true
+serial_comm: true
+sllidar_ros2: true
 launch_robot_state_publisher: true
+unique_joint_state_publisher: true
+dabomb_description: true
