--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -2,7 +2,7 @@
 
 inverse_kinematics: true
 odom: true
-serial_comm: true
+serial_comm: false 
 sllidar_ros2: true
 launch_robot_state_publisher: true
 unique_joint_state_publisher: true
