--- a/dabom_ws/src/inv_kin/config/inv_kin.yaml
+++ b/dabom_ws/src/inv_kin/config/inv_kin.yaml
@@ -3,7 +3,7 @@ inv_kin_node:
     lx: 0.3  # Override node default
     ly: 0.3  # Override node default
     wheel_radius: 0.04  # Override node default
-    cmd_vel_topic: '/custom_cmd_vel'
-    motor_vel_topic: '/custom_motor_vel'
-    frame_id: 'custom_base_link'
+    cmd_vel_topic: '/cmd_vel'
+    motor_vel_topic: '/motor_vel'
+    frame_id: 'base_link'
 
