--- a/dabom_ws/src/rplidar_ros/CMakeLists.txt
+++ b/dabom_ws/src/rplidar_ros/CMakeLists.txt
@@ -82,6 +82,10 @@ install(DIRECTORY launch rviz
   DESTINATION share/${PROJECT_NAME}
 )
 
+install(DIRECTORY config
+  DESTINATION share/${PROJECT_NAME}/config
+)
+
 install(
   TARGETS rplidar_node rplidar_composition rplidar_client
   RUNTIME DESTINATION lib/${PROJECT_NAME}
