--- a/dabom_ws/src/dabomb_description/CMakeLists.txt
+++ b/dabom_ws/src/dabomb_description/CMakeLists.txt
@@ -8,18 +8,12 @@ find_package(urdf REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 
-install(DIRECTORY resource
-  DESTINATION share/${PROJECT_NAME}/
-)
-
-ament_package()
-
+# Install directories
 install(DIRECTORY launch urdf meshes
   DESTINATION share/${PROJECT_NAME}/
 )
 
-install(
-  DIRECTORY resource
+install(DIRECTORY resource
   DESTINATION share/${PROJECT_NAME}/
 )
 
