--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -10,6 +10,6 @@ launch_config:
   # Control RPi nodes
   use_inv_kin: true       # Set to true to launch inv_kin_node
   use_odom: true          # Set to true to launch odom_node
-  use_rplidar: false       # Set to true to launch rplidar_node
-  use_serial_talker: false # Set to true to launch serial talker
-  use_x_serial: true      # Set to true to launch x_serial
+  use_rplidar: true       # Set to true to launch rplidar_node
+  use_serial_talker: true # Set to true to launch serial talker
+  use_x_serial: false      # Set to true to launch x_serial
