--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -1,11 +1,13 @@
 # Launch configuration parameters (to control which components to launch)
 launch_config:
   # Control Computer nodes
-  use_joy: true           # Set to true to launch joystick control
+  use_joy: false           # Set to true to launch joystick control
   use_slam: false          # Set to true to launch SLAM Toolbox
   use_nav2: false          # Set to true to launch Nav2 (Navigation Stack)
-  use_rviz: true          # Set to true to launch RViz for visualization
-  use_robot_state: true  # Set to true to launch robot state publisher
+  use_rviz: false          # Set to true to launch RViz for visualization
+  use_robot_state: false  # Set to true to launch robot state publisher
+  use_xbox: true          # Set to true to launch Xbox controller
+
 
   # Control RPi nodes
   use_inv_kin: false       # Set to true to launch inv_kin_node
@@ -13,4 +15,4 @@ launch_config:
   use_rplidar: false       # Set to true to launch rplidar_node
   use_serial_talker: false # Set to true to launch serial talker
   use_x_serial: false      # Set to true to launch x_serial
-  use_slam: true          # Set to true to launch SLAM Toolbox
+  use_slam: false          # Set to true to launch SLAM Toolbox
