--- a/dabom_ws/src/dabom_bringup/config/nav2_params_copy.yaml
+++ b/dabom_ws/src/dabom_bringup/config/nav2_params_copy.yaml
@@ -41,7 +41,7 @@ amcl:
 
 bt_navigator:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
     global_frame: map
     robot_base_frame: base_link
     odom_topic: /odom
@@ -101,14 +101,6 @@ bt_navigator:
       - nav2_drive_on_heading_cancel_bt_node
       - nav2_is_battery_charging_condition_bt_node
 
-bt_navigator_navigate_through_poses_rclcpp_node:
-  ros__parameters:
-    use_sim_time: False
-
-bt_navigator_navigate_to_pose_rclcpp_node:
-  ros__parameters:
-    use_sim_time: False
-
 controller_server:
   ros__parameters:
     use_sim_time: False
@@ -126,41 +118,46 @@ controller_server:
       plugin: "nav2_controller::SimpleProgressChecker"
       required_movement_radius: 0.5
       movement_time_allowance: 10.0
-    
-    # Correctly define the goal checker parameters
+    # Goal checker parameters
+    #precise_goal_checker:
+    #  plugin: "nav2_controller::SimpleGoalChecker"
+    #  xy_goal_tolerance: 0.25
+    #  yaw_goal_tolerance: 0.25
+    #  stateful: True
     general_goal_checker:
-      plugin: "nav2_controller::SimpleGoalChecker" # Plugin class for the goal checker
+      stateful: True
+      plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.25
       yaw_goal_tolerance: 0.25
-      stateful: True
-
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.1
-      min_vel_y: 0.1
+      min_vel_x: 0.0
+      min_vel_y: 0.0
       max_vel_x: 0.4189
       max_vel_y: 0.4189
       max_vel_theta: 0.67
-      min_speed_xy: 0.1
+      min_speed_xy: 0.0
       max_speed_xy: 0.4189
-      min_speed_theta: 0.1
-      acc_lim_x: 0.5
-      acc_lim_y: 0.5
-      acc_lim_theta: 0.5
-      decel_lim_x: -0.5
-      decel_lim_y: -0.5
-      decel_lim_theta: -0.5
+      min_speed_theta: 0.0
+      # Add high threshold velocity for turtlebot 3 issue.
+      # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
+      acc_lim_x: 0.1
+      acc_lim_y: 0.1
+      acc_lim_theta: 0.1
+      decel_lim_x: -0.1
+      decel_lim_y: 0.1
+      decel_lim_theta: -0.1
       vx_samples: 20
-      vy_samples: 20  # Increase vy_samples for mecanum motion
+      vy_samples: 5
       vtheta_samples: 20
       sim_time: 1.7
       linear_granularity: 0.05
       angular_granularity: 0.025
       transform_tolerance: 0.2
-      xy_goal_tolerance: 0.5
-      trans_stopped_velocity: 0.5
+      xy_goal_tolerance: 0.25
+      trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
       critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
@@ -181,12 +178,13 @@ local_costmap:
       update_frequency: 5.0
       publish_frequency: 2.0
       global_frame: odom
-      robot_base_frame: base_footprint
+      robot_base_frame: base_link
       use_sim_time: false
       rolling_window: true
       width: 3
       height: 3
       resolution: 0.05
+      robot_radius: 0.22
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
@@ -217,7 +215,6 @@ local_costmap:
         map_subscribe_transient_local: True
       always_send_full_costmap: True
 
-
 global_costmap:
   global_costmap:
     ros__parameters:
@@ -225,7 +222,7 @@ global_costmap:
       publish_frequency: 1.0
       global_frame: map
       robot_base_frame: base_link
-      use_sim_time: false
+      use_sim_time: True
       robot_radius: 0.22
       resolution: 0.05
       track_unknown_space: true
@@ -250,19 +247,19 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.2
+        inflation_radius: 0.55
       always_send_full_costmap: True
 
 map_server:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
     # Overridden in launch by the "map" launch configuration or provided default value.
     # To use in yaml, remove the default "map" value in the tb3_simulation_launch.py file & provide full path to map below.
     yaml_filename: ""
 
 map_saver:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
     save_map_timeout: 5.0
     free_thresh_default: 0.25
     occupied_thresh_default: 0.65
@@ -271,30 +268,20 @@ map_saver:
 planner_server:
   ros__parameters:
     expected_planner_frequency: 20.0
-    use_sim_time: True
+    use_sim_time: False
     planner_plugins: ["GridBased"]
     GridBased:
-      plugin: "nav2_theta_star_planner/ThetaStarPlanner"
+      plugin: "nav2_navfn_planner/NavfnPlanner"
       tolerance: 0.5
-      use_astar: false  # Theta* doesn't use A*
+      use_astar: false
       allow_unknown: true
-      max_planning_attempts: 10  # In case the path is initially not feasible
-      use_final_approach_orientation: true  # To set final orientation properly
-      goal_checker_plugins: ["general_goal_checker"]
-      general_goal_checker:
-        stateful: True
-        plugin: "nav2_controller::SimpleGoalChecker"
-        xy_goal_tolerance: 0.25
-        yaw_goal_tolerance: 0.25
-      holonomic: true  # Make sure holonomic movement is enabled for mecanum wheels
-
 
 smoother_server:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
     smoother_plugins: ["simple_smoother"]
     simple_smoother:
-      plugin: "nav2_smoother::SimpleSmoother"
+      plugin: "nav2_smoother/SimpleSmoother"
       tolerance: 1.0e-10
       max_its: 1000
       do_refinement: True
@@ -318,19 +305,19 @@ behavior_server:
     global_frame: odom
     robot_base_frame: base_link
     transform_tolerance: 0.1
-    use_sim_time: false
+    use_sim_time: true
     simulate_ahead_time: 2.0
-    max_rotational_vel: 1.0
-    min_rotational_vel: 0.4
-    rotational_acc_lim: 3.2
+    max_rotational_vel: 0.4
+    min_rotational_vel: 0.01
+    rotational_acc_lim: 0.1
 
 robot_state_publisher:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
 
 waypoint_follower:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
     loop_rate: 20
     stop_on_failure: false
     waypoint_task_executor_plugin: "wait_at_waypoint"
@@ -341,14 +328,14 @@ waypoint_follower:
 
 velocity_smoother:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: True
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.4187, 0.4187, 0.4187]
-    min_velocity: [0.1, 0.1, 0.1]
-    max_accel: [0.5, 0.5, 0.5]
-    max_decel: [-0.5, -0.5, -0.5]
+    max_velocity: [0.41, 0.0, 1.0]
+    min_velocity: [-0.26, 0.0, -1.0]
+    max_accel: [0.1, 0.0, 0.1]
+    max_decel: [-0.1, 0.0, -0.1]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
