--- a/nav2_config.yaml
+++ b/nav2_config.yaml
@@ -1,6 +1,7 @@
 # nav2_params.yaml
 amcl:
   ros__parameters:
+    enabled: False
     use_sim_time: false
     alpha1: 0.2
     alpha2: 0.2
@@ -65,6 +66,15 @@ amcl:
     # Lifecycle node bond mechanism
     bond_heart_period: 0.1
 
+slam_toolbox:
+  ros__parameters:
+    use_sim_time: false
+    mode: "mapping"
+    #map_file_name: ""
+    use_scan_matching: true
+    scan_topic: "/scan"
+    minimum_travel_distance: 0.5
+    minimum_tracel_angle: 0.05
 
 map_server:
   ros__parameters:
@@ -114,15 +124,14 @@ controller_server:
     controller_plugins: ["FollowPath"]
     FollowPath:
       plugin: "dwb_core/DWBLocalPlanner"
-      # use_velocity_scaled_lookahead_dist: true
-      # lookahead_dist: 0.5
-      # max_lookahead_dist: 2.0
-      # min_lookahead_dist: 0.3
-      # max_allowed_time_to_collision: 1.0
-      # regulate_linear_velocity: true
-      # use_regulated_linear_velocity_scaling: true
-      # use_cost_regulated_linear_velocity_scaling: false
-      # transform_tolerance: 0.2
+      max_vel_theta: 0.67
+      min_speed_xy: 0.0
+      max_speed_xy: 0.47
+      min_speed_theta: 0.1
+      min_vel_x: 0.1
+      min_vel_y: 0.1
+      max_vel_x: 0.48
+      max_vel_y: 0.48
 
     progress_checker_plugin: ["progress_checker"]
     progress_checker:
@@ -238,11 +247,24 @@ global_costmap:
           marking: True
           # Wether source should raytrace clear in costmap <- no clue what this means <- use raytracing to clear obstacles with laser scan
           clearing: True # default False
+          # max range to mark obstacles m
+          obstacle_max_range: 2.5
+          obstacle_min_range: 0.0
+          # max range to clear obstacles in 
+          raytracer_max_range: 3.0
+          raytrace_min_range: 0.0
 
       inflation_layer:
         plugin: "nav2_costmap_2d/InflationLayer"
-
-      
+        enabled: True
+        # Inflation radius around lethal objeccts
+        inflation_radius: 0.55
+        # Exponential decay factor across inflation range
+        cost_scaling_factor: 10.0
+        # Inflate unkown space to lethal
+        inflate_unkown: False
+        # infalce unkown celss
+        inflate_around_unkown: False
 
 local_costmap:
   local_costmap:
@@ -255,57 +277,66 @@ local_costmap:
       width: 3.0
       height: 3.0
       resolution: 0.05
-      plugins: ["obstacle_layer", "inflation_layer"]
-
-      obstacle_layer:
-        plugin: "nav2_costmap_2d::ObstacleLayer"
-        enabled: true
-        observation_sources: scan
-        scan:
-          topic: scan
-          max_obstacle_height: 2.0
-          obstacle_range: 2.5
-          raytrace_range: 3.0
-          clearing: true
-          marking: true
-
-      inflation_layer:
-        plugin: "nav2_costmap_2d::InflationLayer"
-        inflation_radius: 0.55
-        cost_scaling_factor: 10.0
-
+      use_sim_time: False
 
 bt_navigator:
   ros__parameters:
     use_sim_time: false
-    bt_xml_filename: "path/to/navigate_w_replanning_and_recovery.xml"
+    navigators: ["navigate_to_pose", "navigate_through_pose"]
+    navigate_to_pose:
+      plugin: "nav2_bt_navigator/NavigateToPoseNavigator"
+    navigate_through_pose:
+      plugin: "nav2_bt_navigator/NavigateThroughPoseNavigator"
+    # ms
+    bt_loop_duration: 10
+    #How long the bt action node is waiting for acknowldegement
+    default_server_timeout: 20
+    # wait for service timeout how long node will wait for acknowledgement from a service or action server on BT init
+    wait_for_service_timeout: 1000
+    # After how long do we discard the goal handle in seconds in seconds
+    action_server_result_timeout: 30 # default 900
+    # toleracne for tf
+    transform_tolerace: 0.1
+    global_frame: "map"
+    robot_base_frame: "base_link"
+    odom_topic: "odom"
+    plugin_lib_names:
+      - nav2_compute_path_to_pose_action_bt_node
+      - nav2_follow_path_action_bt_node
+      - nav2_back_up_action_bt_node
+      - nav2_spin_action_bt_node
+      - nav2_wait_action_bt_node
+      - nav2_clear_costmap_service_bt_node
+      - nav2_is_stuck_condition_bt_node
+      - nav2_goal_reached_condition_bt_node
+      - nav2_initial_pose_received_condition_bt_node
+      - nav2_goal_updated_condition_bt_node
+      - nav2_reinitialize_global_localization_service_bt_node
+      - nav2_rate_controller_bt_node
+      - nav2_distance_controller_bt_node
+      - nav2_speed_controller_bt_node
+      - nav2_recovery_node_bt_node
+      - nav2_pipeline_sequence_bt_node
+      - nav2_round_robin_node_bt_node
+      - nav2_transform_available_condition_bt_node
+      - nav2_time_expired_condition_bt_node
+      - nav2_distance_traveled_condition_bt_node
+      - nav2_single_trigger_bt_node
+    error_code_names:
+      - compute_path_error_code
+      - follow_path_error_code
 
 waypoint_follower:
   ros__parameters:
-    use_sim_time: false
-    waypoint_follower_plugin: "nav2_waypoint_follower::WaypointFollower"
+  # Rat eat which to check nagivation stack
+  loop_rate: 20
+  stop_on_failure: true 
+  global_frame_id: "map"
+  action_server_
+    # use_sim_time: false
+    # waypoint_follower_plugin: "nav2_waypoint_follower::WaypointFollower"
 
 robot_description:
   ros__parameters:
     use_sim_time: false
     urdf: "path/to/robot.urdf"
-
-# Parameters for the holonomic mecanum drive controller (assuming you're using diff_drive_controller)
-mecanum_controller:
-  ros__parameters:
-    type: "mecanum_drive_controller/MecanumDriveController"
-    publish_rate: 50
-    twist_topic: "cmd_vel"
-    odom_topic: "odom"
-    base_frame_id: "base_link"
-    enable_odom_tf: true
-    publish_cmd: true
-    wheel_radius: 0.05
-    wheel_separation: 0.3
-    wheel_base: 0.3
-    front_left_wheel: "front_left_wheel_joint"
-    front_right_wheel: "front_right_wheel_joint"
-    rear_left_wheel: "rear_left_wheel_joint"
-    rear_right_wheel: "rear_right_wheel_joint"
-    velocity_rolling_window_size: 10
-    cmd_vel_timeout: 0.25
