Nav2 Working launch??

--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -2,11 +2,11 @@
 launch_config:
   # Control Computer nodes
   use_joy: false           # Set to true to launch joystick control
-  use_slam: false          # Set to true to launch SLAM Toolbox
-  use_nav2: false          # Set to true to launch Nav2 (Navigation Stack)
+  use_slam: true          # Set to true to launch SLAM Toolbox
+  use_nav2: true          # Set to true to launch Nav2 (Navigation Stack)
   use_rviz: false          # Set to true to launch RViz for visualization
   use_robot_state: false  # Set to true to launch robot state publisher
-  use_xbox: true          # Set to true to launch Xbox controller
+  use_xbox: false          # Set to true to launch Xbox controller
 
 
   # Control RPi nodes
