--- a/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
+++ b/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
@@ -198,10 +198,10 @@ local_costmap:
         raytrace_max_range: 6.0  # Maximum range for detecting obstacles (6 meters)
         obstacle_max_range: 6.0  # Maximum distance to mark obstacles
 
-      static_layer:
-        plugin: "nav2_costmap_2d::StaticLayer"
-        map_subscribe_transient_local: True
-      always_send_full_costmap: True
+      #static_layer:
+      #  plugin: "nav2_costmap_2d::StaticLayer"
+      #  map_subscribe_transient_local: True
+      #always_send_full_costmap: True
 
 
 global_costmap:
@@ -230,9 +230,9 @@ global_costmap:
           raytrace_min_range: 0.0
           obstacle_max_range: 2.5
           obstacle_min_range: 0.0
-      static_layer:
-        plugin: "nav2_costmap_2d::StaticLayer"
-        map_subscribe_transient_local: True
+      #static_layer:
+      #  plugin: "nav2_costmap_2d::StaticLayer"
+      #  map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
