--- a/dabom_ws/src/dabom_bringup/config/launch_config.yaml
+++ b/dabom_ws/src/dabom_bringup/config/launch_config.yaml
@@ -2,7 +2,7 @@
 launch_config:
   # Control Computer nodes
   use_joy: false           # Set to true to launch joystick control
-  use_slam: true          # Set to true to launch SLAM Toolbox
+  use_slam: false          # Set to true to launch SLAM Toolbox
   use_nav2: true          # Set to true to launch Nav2 (Navigation Stack)
   use_rviz: false          # Set to true to launch RViz for visualization
   use_robot_state: false  # Set to true to launch robot state publisher
@@ -10,9 +10,9 @@ launch_config:
 
 
   # Control RPi nodes
-  use_inv_kin: false       # Set to true to launch inv_kin_node
-  use_odom: false          # Set to true to launch odom_node
-  use_rplidar: false       # Set to true to launch rplidar_node
-  use_serial_talker: false # Set to true to launch serial talker
+  use_inv_kin: true       # Set to true to launch inv_kin_node
+  use_odom: true          # Set to true to launch odom_node
+  use_rplidar: true       # Set to true to launch rplidar_node
+  use_serial_talker: true # Set to true to launch serial talker
   use_x_serial: false      # Set to true to launch x_serial
-  use_slam: false          # Set to true to launch SLAM Toolbox
+  use_slam_pi: false          # Set to true to launch SLAM Toolbox
