rplidar from lidar_test branch

--- a/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
+++ b/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
@@ -129,8 +129,8 @@ controller_server:
       stateful: True
 
     # MPPI controller parameters with updated velocity settings
-    MPPIController:
-      plugin: "nav2_mppi_controller/MppiController"
+    FollowPath:
+      plugin: "nav2_mppi_controller::MPPIController"
       motion_model: "Omni"
       batch_size: 1000
       time_steps: 56
