--- a/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
+++ b/dabom_ws/src/dabom_bringup/config/nav2_params.yaml
@@ -108,59 +108,74 @@ bt_navigator_navigate_to_pose_rclcpp_node:
 
 controller_server:
   ros__parameters:
-    use_sim_time: False  # Real robot setup
-    controller_frequency: 20.0  # Keep the controller running at 20 Hz
+    use_sim_time: False
+    controller_frequency: 20.0
+    min_x_velocity_threshold: 0.01
+    min_y_velocity_threshold: 0.2
+    min_theta_velocity_threshold: 0.01
     failure_tolerance: 0.3
     progress_checker_plugin: "progress_checker"
-    goal_checker_plugins: ["general_goal_checker"]
-    controller_plugins: ["MPPIController"]
+    goal_checker_plugins: ["general_goal_checker"] # "precise_goal_checker"
+    controller_plugins: ["FollowPath"]
 
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
       required_movement_radius: 0.5
       movement_time_allowance: 10.0
-
-    # Goal checker parameters with updated tolerances
+    # Goal checker parameters
+    #precise_goal_checker:
+    #  plugin: "nav2_controller::SimpleGoalChecker"
+    #  xy_goal_tolerance: 0.25
+    #  yaw_goal_tolerance: 0.25
+    #  stateful: True
     general_goal_checker:
-      plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.05  # Updated tolerance in meters (5 cm)
-      yaw_goal_tolerance: 0.1  # Updated tolerance in radians (~5.7 degrees)
       stateful: True
-
-    # MPPI controller parameters with updated velocity settings
+      plugin: "nav2_controller::SimpleGoalChecker"
+      xy_goal_tolerance: 0.25
+      yaw_goal_tolerance: 0.25
+    # DWB parameters
     FollowPath:
-      plugin: "nav2_mppi_controller::MPPIController"
-      motion_model: "Omni"
-      batch_size: 1000
-      time_steps: 56
-      model_dt: 0.05
-
-      # Updated velocity limits
-      vx_max: 0.40  # Forward velocity (m/s)
-      vy_max: 0.40  # Lateral velocity (m/s)
-      wz_max: 0.6  # Angular velocity (rad/s)
-      vx_min: -0.35  # Reverse velocity (m/s)
-
-      # Acceleration limits (you can adjust these based on your robot's specs)
-      ax_max: 3.0
-      ay_max: 3.0
-      az_max: 3.5
-      ax_min: -3.0
-
-      # Standard deviations for sampling
-      vx_std: 0.2
-      vy_std: 0.2
-      wz_std: 0.2
-
-      # Tuning parameters
-      temperature: 0.3
-      gamma: 0.015
-      
-      # Updated retry attempt limit
-      retry_attempt_limit: 3  # Retry up to 3 times on failure
-
-      visualize: False
+      plugin: "dwb_core::DWBLocalPlanner"
+      debug_trajectory_details: True
+      min_vel_x: 0.0
+      min_vel_y: 0.0
+      max_vel_x: 0.4
+      max_vel_y: 0.4
+      max_vel_theta: 0.6
+      min_speed_xy: 0.0
+      max_speed_xy: 0.26
+      min_speed_theta: 0.01
+      # Add high threshold velocity for turtlebot 3 issue.
+      # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
+      acc_lim_x: 2.5
+      acc_lim_y: 2.5
+      acc_lim_theta: 3.0
+      decel_lim_x: -2.5
+      decel_lim_y: -2.5
+      decel_lim_theta: -3.0
+      vx_samples: 20
+      vy_samples: 5
+      vtheta_samples: 20
+      sim_time: 1.7
+      linear_granularity: 0.05
+      angular_granularity: 0.025
+      transform_tolerance: 0.2
+      xy_goal_tolerance: 0.25
+      trans_stopped_velocity: 0.25
+      short_circuit_trajectory_evaluation: True
+      stateful: True
+      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+      BaseObstacle.scale: 0.02
+      PathAlign.scale: 32.0
+      PathAlign.forward_point_distance: 0.1
+      GoalAlign.scale: 24.0
+      GoalAlign.forward_point_distance: 0.1
+      PathDist.scale: 32.0
+      GoalDist.scale: 24.0
+      RotateToGoal.scale: 32.0
+      RotateToGoal.slowing_factor: 5.0
+      RotateToGoal.lookahead_time: -1.0
 
 local_costmap:
   local_costmap:
@@ -168,40 +183,42 @@ local_costmap:
       update_frequency: 5.0
       publish_frequency: 2.0
       global_frame: odom
-      robot_base_frame: base_footprint
-      use_sim_time: false
+      robot_base_frame: base_link
+      use_sim_time: True
       rolling_window: true
-      width: 3  # Size of the local costmap: 3x3 meters
+      width: 3
       height: 3
-      resolution: 0.05  # Grid cell size: 5 cm per cell
+      resolution: 0.05
+      robot_radius: 0.3
       plugins: ["voxel_layer", "inflation_layer"]
-      
-      # Voxel layer (disabled for 2D LIDAR)
-      voxel_layer:
-        plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: false  # Disabled for 2D planar LIDAR
-      
-      # Inflation layer (adds a buffer around obstacles)
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0  # Determines how fast the cost increases near obstacles
-        inflation_radius: 0.35  # Buffer zone around obstacles (35 cm)
-
-      # LIDAR observation source settings
-      observation_sources: scan
-      scan:
-        topic: /scan
-        max_obstacle_height: 1.0  # Maximum obstacle height (1 meter) based on robot height
-        clearing: True
-        marking: True
-        data_type: "LaserScan"
-        raytrace_max_range: 6.0  # Maximum range for detecting obstacles (6 meters)
-        obstacle_max_range: 6.0  # Maximum distance to mark obstacles
-
-      #static_layer:
-      #  plugin: "nav2_costmap_2d::StaticLayer"
-      #  map_subscribe_transient_local: True
-      #always_send_full_costmap: True
+        cost_scaling_factor: 3.0
+        inflation_radius: 0.6
+      voxel_layer:
+        plugin: "nav2_costmap_2d::VoxelLayer"
+        enabled: True
+        publish_voxel_map: True
+        origin_z: 0.0
+        z_resolution: 0.05
+        z_voxels: 16
+        max_obstacle_height: 2.0
+        mark_threshold: 0
+        observation_sources: scan
+        scan:
+          topic: /scan
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "LaserScan"
+          raytrace_max_range: 3.0
+          raytrace_min_range: 0.0
+          obstacle_max_range: 2.5
+          obstacle_min_range: 0.0
+      static_layer:
+        plugin: "nav2_costmap_2d::StaticLayer"
+        map_subscribe_transient_local: True
+      always_send_full_costmap: True
 
 
 global_costmap:
@@ -212,7 +229,7 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: false
-      robot_radius: 0.22
+      robot_radius: 0.3
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -230,13 +247,13 @@ global_costmap:
           raytrace_min_range: 0.0
           obstacle_max_range: 2.5
           obstacle_min_range: 0.0
-      #static_layer:
-      #  plugin: "nav2_costmap_2d::StaticLayer"
-      #  map_subscribe_transient_local: True
+      static_layer:
+        plugin: "nav2_costmap_2d::StaticLayer"
+        map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.2
+        inflation_radius: 0.6
       always_send_full_costmap: True
 
 map_server:
@@ -256,36 +273,40 @@ map_saver:
 
 planner_server:
   ros__parameters:
-    expected_planner_frequency: 20.0
-    use_sim_time: False
-    planner_plugins: ["SmacPlannerLattice"]
-    SmacPlannerLattice:
-      plugin: "nav2_smac_planner/SmacPlannerLattice"
-      tolerance: 0.25  # Adjusted for precision
-      allow_unknown: true
-      downsample_costmap: false
-      cost_penalty: 1.7
-      lattice_spacing: 0.25  # Adjust as per your environment
-      max_planning_attempts: 5  # Adjust to balance performance
-      minimum_turning_radius: 0.0  # Based on Mecanum wheel capabilities
-      reverse_penalty: 2.0
-      change_penalty: 0.15
-      non_straight_penalty: 1.2
-      path_epsilon: 0.1
-      cache_obstacle_heuristic: True
-      use_final_approach_orientation: true
-      holonomic: true  # This should be enabled for Mecanum wheels
+    planner_plugins: ["GridBased"]
+    use_sim_time: True
 
-
-smoother_server:
-  ros__parameters:
-    use_sim_time: false
-    smoother_plugins: ["simple_smoother"]
-    simple_smoother:
-      plugin: "nav2_smoother::SimpleSmoother"
-      tolerance: 1.0e-10
-      max_its: 1000
-      do_refinement: True
+    GridBased:
+      plugin: "nav2_smac_planner/SmacPlannerHybrid"
+      tolerance: 0.5                      # tolerance for planning if unable to reach exact pose, in meters
+      downsample_costmap: false           # whether or not to downsample the map
+      downsampling_factor: 1              # multiplier for the resolution of the costmap layer (e.g. 2 on a 5cm costmap would be 10cm)
+      allow_unknown: false                # allow traveling in unknown space
+      max_iterations: 1000000             # maximum total iterations to search for before failing (in case unreachable), set to -1 to disable
+      max_on_approach_iterations: 1000    # maximum number of iterations to attempt to reach goal once in tolerance
+      max_planning_time: 3.5              # max time in s for planner to plan, smooth, and upsample. Will scale maximum smoothing and upsampling times based on remaining time after planning.
+      motion_model_for_search: "DUBIN"    # For Hybrid Dubin, Redds-Shepp
+      cost_travel_multiplier: 2.0         # For 2D: Cost multiplier to apply to search to steer away from high cost areas. Larger values will place in the center of aisles more exactly (if non-`FREE` cost potential field exists) but take slightly longer to compute. To optimize for speed, a value of 1.0 is reasonable. A reasonable tradeoff value is 2.0. A value of 0.0 effective disables steering away from obstacles and acts like a naive binary search A*.
+      angle_quantization_bins: 64         # For Hybrid nodes: Number of angle bins for search, must be 1 for 2D node (no angle search)
+      analytic_expansion_ratio: 3.5       # For Hybrid/Lattice nodes: The ratio to attempt analytic expansions during search for final approach.
+      analytic_expansion_max_length: 3.0    # For Hybrid/Lattice nodes: The maximum length of the analytic expansion to be considered valid to prevent unsafe shortcutting (in meters). This should be scaled with minimum turning radius and be no less than 4-5x the minimum radius
+      minimum_turning_radius: 0.40        # For Hybrid/Lattice nodes: minimum turning radius in m of path / vehicle
+      reverse_penalty: 2.1                # For Reeds-Shepp model: penalty to apply if motion is reversing, must be => 1
+      change_penalty: 0.4                 # For Hybrid nodes: penalty to apply if motion is changing directions, must be >= 0
+      non_straight_penalty: 1.20          # For Hybrid nodes: penalty to apply if motion is non-straight, must be => 1
+      cost_penalty: 2.0                   # For Hybrid nodes: penalty to apply to higher cost areas when adding into the obstacle map dynamic programming distance expansion heuristic. This drives the robot more towards the center of passages. A value between 1.3 - 3.5 is reasonable.
+      retrospective_penalty: 0.025        # For Hybrid/Lattice nodes: penalty to prefer later maneuvers before earlier along the path. Saves search time since earlier nodes are not expanded until it is necessary. Must be >= 0.0 and <= 1.0
+      rotation_penalty: 5.0               # For Lattice node: Penalty to apply only to pure rotate in place commands when using minimum control sets containing rotate in place primitives. This should always be set sufficiently high to weight against this action unless strictly necessary for obstacle avoidance or there may be frequent discontinuities in the plan where it requests the robot to rotate in place to short-cut an otherwise smooth path for marginal path distance savings.
+      lookup_table_size: 20.0               # For Hybrid nodes: Size of the dubin/reeds-sheep distance window to cache, in meters.
+      cache_obstacle_heuristic: True      # For Hybrid nodes: Cache the obstacle map dynamic programming distance expansion heuristic between subsiquent replannings of the same goal location. Dramatically speeds up replanning performance (40x) if costmap is largely static.  
+      allow_reverse_expansion: False      # For Lattice nodes: Whether to expand state lattice graph in forward primitives or reverse as well, will double the branching factor at each step.   
+      smooth_path: True                   # For Lattice/Hybrid nodes: Whether or not to smooth the path, always true for 2D nodes.
+      smoother:
+        max_iterations: 1000
+        w_smooth: 0.3
+        w_data: 0.2
+        tolerance: 1.0e-10
+        do_refinement: true               # Whether to recursively run the smoother 3 times on the results from prior runs to refine the results further
 
 behavior_server:
   ros__parameters:
@@ -333,11 +354,11 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.4187, 0.4187, 0.4187]
-    min_velocity: [0.1, 0.1, 0.1]
+    max_velocity: [0.4, 0.4, 0.4]
+    min_velocity: [0.0, 0.0, 0.0]
     max_accel: [0.5, 0.5, 0.5]
     max_decel: [-0.5, -0.5, -0.5]
     odom_topic: "odom"
     odom_duration: 0.1
-    deadband_velocity: [0.0, 0.0, 0.0]
+    deadband_velocity: [0.1, 0.1, 0.1]
     velocity_timeout: 1.0
